# pymol_plotter

./: LICENSE.txt  Readme.md  pyproject.toml
example/: 5uzd.cif  example.py  run.sh  s2.csv  value_out.pml
src/pymol_plotter/: plotting.py
src/pymol_plotter/dat/: base.pml
